// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`assertAccessible API should throw an error with a11y issues found for dom with a11y issues 1`] = `
"2 Accessibility issues found
 * (document-title) Documents must have <title> element to aid in navigation: html
	- Help URL: https://dequeuniversity.com/rules/axe/4.7/document-title

* (link-name) Links must have discernible text: a
	- Help URL: https://dequeuniversity.com/rules/axe/4.7/link-name"
`;

exports[`assertAccessible API should throw error with HTML element with a11y issues 1`] = `
"1 Accessibility issues found
 * (link-name) Links must have discernible text: a
	- Help URL: https://dequeuniversity.com/rules/axe/4.7/link-name"
`;
